lang/tooling/fol-editor/tree-sitter/grammar.js
    source_file: $ => seq(
      optional($._reserved_word_anchor),
      repeat(choice($._top_level_item, ';')),
    ),

    // Keep deleted keywords reachable for Tree-sitter's reserved-word table
    // without admitting them into ordinary FOL source.
    _reserved_word_anchor: $ => seq($._reserved_word_anchor_token, repeat1($._removed_keyword)),
    _top_level_item: $ => choice(
      $.use_decl,
      $.var_decl,
      $.con_decl,
      $.lab_decl,
      $.fun_decl,
      $.pro_decl,
      $.log_decl,
      $.typ_decl,
      $.ali_decl,
      $.def_decl,
      $.seg_decl,
      $.std_decl,
      $.comment,
      $.doc_comment,
    ),

    var_decl: $ => prec.right(seq(choice('var', '+var', '~var', '-var', '!var', '?var', '@var'), optional(field('modifiers', $.decl_modifiers)), $.typed_binding, optional(seq('=', field('value', $.expr))))),
    fun_decl: $ => seq('fun', optional(field('modifiers', $.decl_modifiers)), field('declaration', choice($.plain_fun_decl, $.method_decl))),
    decl_modifiers: $ => seq('[', optional($.modifier_list), ']'),
    typed_binding: $ => seq(field('name', $.identifier), optional(seq(':', field('type', $.type_expr)))),
    plain_fun_decl: $ => seq(field('name', $.identifier), optional(field('generics', $.generic_params)), $.params, optional($.return_type), optional($.error_type), '=', $.block),
    params: $ => seq('(', optional(commaSep($.param)), ')'),
    param: $ => seq(
      field('name', $.identifier),
      optional(field('options', $.parameter_options)),
      ':',
      optional('...'),
      field('type', $.type_expr),
      optional(seq('=', field('default', $.expr))),
    ),
    return_type: $ => seq(':', $.type_expr),
    type_expr: $ => choice(
      $.pointer_type,
      $.channel_type,
      $.eventual_type,
      $.mutex_type,
      $.function_type,
      $.generic_type_expr,
      $.qualified_path,
      $.identifier,
      $.container_type,
      $.shell_type,
      $.owned_type,
    ),

    // Braced routine type `{fun (n: int): int}` with an optional environment
    // lifetime `[bor=L]` marking an escaping-closure type (V3 section 5.3).
    shell_type: $ => choice(
      seq(choice('opt', 'err'), '[', $.type_expr, ']'),
      seq('opt', $.owned_type),
      seq('opt', $.pointer_type),
    ),
    block: $ => seq('{', repeat(choice($.stmt, ';')), optional($.expr), '}'),
    stmt: $ => choice(
      $.var_decl,
      $.block,
      $.assignment_stmt,
      $.return_stmt,
      $.yield_stmt,
      $.dfr_stmt,
      $.edf_stmt,
      $.report_stmt,
      $.panic_stmt,
      $.assert_stmt,
      $.unreachable_stmt,
      $.break_stmt,
      $.if_stmt,
      $.select_stmt,
      $.while_stmt,
      $.for_stmt,
      $.each_stmt,
      $.when_expr,
      $.loop_expr,
      $.expr,
    ),

    return_stmt: $ => prec.right(seq('return', optional($.expr))),
    when_expr: $ => seq('when', '(', $.expr, ')', $.when_block),
    when_block: $ => seq('{', repeat(choice(
      $.case_clause,
      $.is_clause,
      $.in_clause,
      $.has_clause,
      $.of_clause,
      $.on_clause,
      $.default_clause,
      $.block,
      $.comment,
      $.doc_comment,
    )), '}'),
    // Each arm has two spellings the compiler accepts: the block form
    // `is (x) { ... }`, and the arrow form `is x -> value;` used when the
    // `when` is itself an expression.
    case_clause: $ => seq('case', $._arm_tail),
    is_clause: $ => seq('is', $._arm_tail),
    in_clause: $ => seq('in', $._arm_tail),
    has_clause: $ => seq('has', $._arm_tail),
    of_clause: $ => seq('of', $._arm_tail),
    // `on (binding) { ... }` binds the present/error shell payload.
    on_clause: $ => seq('on', $._arm_tail),
    _arm_tail: $ => choice(
      seq('(', $.expr, ')', $.block),
      seq($.expr, '->', $.expr, ';'),
    ),
    default_clause: $ => seq('*', choice($.block, seq('->', $.expr, ';'))),
    expr: $ => choice(
      $.pipe_or_expr,
      $.pipe_expr,
      $.binary_expr,
      $.unary_expr,
      $.ownership_op,
      $.if_expr,
      $.when_expr,
      $.loop_expr,
      $.range_expr,
      $.spawn_expr,
      $.anonymous_fun_expr,
      $.anonymous_pro_expr,
      $.anonymous_log_expr,
      $.expr_atom,
    ),

    expr_atom: $ => choice(
      $.check_expr,
      $.call_expr,
      $.dot_intrinsic,
      $.field_access,
      $.channel_access,
      $.index_access,
      $.qualified_path,
      $.identifier,
      $.this_expr,
      $.self_expr,
      $.where_expr,
      $.get_expr,
      $.async_expr,
      $.await_expr,
      $.do_expr,
      $.if_expr,
      $.range_expr,
      $.anonymous_fun_expr,
      $.anonymous_pro_expr,
      $.anonymous_log_expr,
      $.paren_expr,
      $.record_literal,
      $.container_literal,
      $.string_literal,
      $.raw_string_literal,
      $.char_literal,
      $.float_literal,
      $.integer_literal,
      $.boolean_literal,
      $.nil_literal,
    ),

    range_expr: $ => choice(
      prec.right(seq(field('start', choice($.expr_atom, $.unary_expr)), field('operator', choice('..', '...')), field('end', $.expr))),
      prec.right(seq(field('operator', choice('..', '...')), field('end', $.expr))),
      prec.right(seq(field('start', choice($.expr_atom, $.unary_expr)), field('operator', choice('..', '...')))),
    ),
    // `[spn]call` scoped spawn, `[spn, det]call` detached spawn, `[>]call`
    // scoped-spawn shorthand.
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    integer_literal: _ =>
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*|0[bB][01][01_]*|0[oO][0-7][0-7_]*|[0-9][0-9_]*/,
    // Single quotes are the compiler's raw-quoted family: one Unicode scalar
    // lowers as a character, while empty/two-or-more scalars lower as a raw
    // string. Backslashes have no escape meaning in this family.
    boolean_literal: _ => choice('true', 'false'),
